# Daniele_BioScout

data_engineer_technical_challenge/data.data_engineer_technical_challenge/: README.md  data_analysis_and_visualization.ipynb  functions.ipynb  global_variables.ipynb  missed_detection_&_false_positives.csv  pyproject.toml
data_engineer_technical_challenge/data.data_engineer_technical_challenge/data/tables/imagery/ground truths/: 1558503.csv  1606985.csv  1609551.csv  1648934.csv  1649013.csv  1656357.csv  1953555.csv  2821089.csv  2821108.csv  2821537.csv  2821821.csv  2821860.csv  2835856.csv  2835907.csv  2835957.csv  2836438.csv  485480.csv  485510.csv  485540.csv  485551.csv  485560.csv  485578.csv  485590.csv  485599.csv  485618.csv  551886.csv  557485.csv  557519.csv  557523.csv  557559.csv  557598.csv  557634.csv  557636.csv  557652.csv  557655.csv  557671.csv  557673.csv  557682.csv  557701.csv  557702.csv  (+60 more)
data_engineer_technical_challenge/data.data_engineer_technical_challenge/data/tables/imagery/model predictions/: 1558503.jpg.csv  1606985.jpg.csv  1609551.jpg.csv  1648934.jpg.csv  1649013.jpg.csv  1656357.jpg.csv  1953555.jpg.csv  2821089.jpg.csv  2821108.jpg.csv  (+91 more)
data_engineer_technical_challenge/data.data_engineer_technical_challenge/data/tables/weather_data/: weather_devices.csv
data_engineer_technical_challenge/data.data_engineer_technical_challenge/src/bioscout_tech_challenge/: __init__.py  __main__.py  checks.py  cli.py
data_engineer_technical_challenge/data.data_engineer_technical_challenge/src/bioscout_tech_challenge/models/: bounding_box.py
(+1 files in other folders)
