[tool.poetry]
name = "bioscout-tech-challenge"
version = "0.1.0"
description = "Technical challenge for BioScout's 2024 Data Engineer Role"
authors = ["Nick <nicholas@bioscout.com.au>"]
readme = "README.md"

[tool.poetry.scripts]
bioscout-tech-challenge = "bioscout_tech_challenge.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.setuptools.packages.find]
where = ["src"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
plotly = "^5.24.1"
numpy = "^2.1.3"
jupyterlab = "^4.3.0"
pyapp = "^4.16"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
